src/objects/Travel_MERC__c.object
<CustomObject>
    <description>Used to record travel details for speakers and participants.
Created by John A Adams 9/30/2013</description>
    <fields>
        <fullName>Comment_MERC__c</fullName>
        <description>Comments 
Created by John A Adams 10/31/2013</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Travel_MERC__c</fullName>
        <description>End of Travel

Created by John A Adams 10/10/2013</description>
        <label>End Travel</label>
        <summarizedField>Travel_Itinerary_MERC__c.Date_MERC__c</summarizedField>
        <summaryForeignKey>Travel_Itinerary_MERC__c.Travel_MERC__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name_MERC__c</fullName>
        <description>First Name of Passenger
Created by John A Adams 10/31/2013</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_MERC__c</fullName>
        <description>Last name of passenger
Created by John A Adams 10/31/2013</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Travel records for Meeting Participant
Created by John A Adams 10/3/2013</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Travel</relationshipLabel>
        <relationshipName>Travel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Name_MERC__c</fullName>
        <description>Middle name of passenger 
Created by John A Adams 10/31/2013</description>
        <formula>Meeting_Participant_MERC__r.Account_MERC__r.Mdl_Nm_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Travel_MERC__c</fullName>
        <description>Start of travel

Created by John A Adams 10/10/2013</description>
        <label>Start Travel</label>
        <summarizedField>Travel_Itinerary_MERC__c.Date_MERC__c</summarizedField>
        <summaryForeignKey>Travel_Itinerary_MERC__c.Travel_MERC__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Travel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Travel #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>